--- a/실습 및 숙제/실습 5 flex(google 메인 페이지).html
+++ b/실습 및 숙제/실습 5 flex(google 메인 페이지).html
@@ -74,10 +74,10 @@
             box-shadow: 0 0 0.375rem 0.0625rem #30303050;
             box-sizing: border-box;
             display: none;
-            padding: 2rem 3rem;
+            padding: 2rem 3rem; 
             position: fixed;
             transform: translateY(0.75rem);
-            white-space: nowrap;
+            white-space: nowrap; /*브라우저가 줄어들어도 글씨의 행이 나타나지 않게 만들어 줌*/
         }
 
         #header > .nav > .menu > .item.app > .check:checked ~ .menu {
