--- a/1. HTML/a.html
+++ b/1. HTML/a.html
@@ -6,6 +6,7 @@
     <title>a 태그</title>
 </head>
 <body>
+    <!-- 다른 페이지로 이동시키기 위한 태그 -->
     <a href="https://www.naver.com" target="_self">네이버</a>
     <a href="https://www.google.com" target="_blank">구글</a>
     <a href="https://www.daum.net" target="_self">다음</a>
